Rigtig meget lort (Rediger Tilbud)

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 		<script type="text/javascript" src="application/controllers/opretTilbudController.js"></script>
 		<script type="text/javascript" src="application/controllers/tilbudOversigtController.js"></script>
 		<script type="text/javascript" src="application/controllers/minProfilController.js"></script>
+		<script type="text/javascript" src="application/controllers/redigerTilbudController.js"></script>
 		<script type="text/javascript" src="application/runs/loadIdService.js"></script>
 		
 		<!-- Custom styles -->
