--- a/pages/tilbudoversigt.html
+++ b/pages/tilbudoversigt.html
@@ -37,7 +37,7 @@
 								<div class="btn-group">
 									<a href class="btn btn-info btn-xs dropdown-toggle" data-toggle="dropdown">Mere <span class="caret"></span></a>
 									<ul class="dropdown-menu">
-										<li><a href>Rediger</a></li>
+										<li><a ng-click="gotoEditSale(sale)" ui-sref="tilbud_rediger" href>Rediger</a></li>
 										<li><a ng-click="setSaleToDelete(sale)" data-toggle="modal" data-target="#deleteModal" href>Slet</a></li>
 									</ul>
 								</div>
