--- a/pages/tilbudoversigt.html
+++ b/pages/tilbudoversigt.html
@@ -61,7 +61,7 @@
        	<p>Er du sikker på du vil slette det valgte tilbud?</p>
       </div>
       <div class="modal-footer">
-        <button type="button" disabled="deleting" class="btn btn-default" data-dismiss="modal">Annuller</button>
+        <button type="button" ng-disabled="deleting" class="btn btn-default" data-dismiss="modal">Annuller</button>
         <button id="buttonDelete" type="button" ng-click="delete()" data-spinner-size="32" data-style="zoom-out" class="btn btn-danger ladda-button"><span class="ladda-label">Slet</span></button>
       </div>
     </div>
