--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 		<script type="text/javascript" src="application/controllers/opretButikController.js"></script>
 		<script type="text/javascript" src="application/controllers/minButikController.js"></script>
 		<script type="text/javascript" src="application/controllers/opretTagController.js"></script>
+		<script type="text/javascript" src="application/controllers/tagOversigtController.js"></script>
 		<script type="text/javascript" src="application/controllers/opretTilbudController.js"></script>
 		<script type="text/javascript" src="application/controllers/tilbudOversigtController.js"></script>
 		<script type="text/javascript" src="application/controllers/minProfilController.js"></script>
