--- a/pages/tagoversigt.html
+++ b/pages/tagoversigt.html
@@ -24,8 +24,8 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr>
-							<td>Tøj</td>
+						<tr ng-repeat="tag in tags | filter:searchText">
+							<td>{{tag.name}}</td>
 							<td><a href class="btn btn-info btn-xs">Vis</a></td>
 							<td align="right">
 								<div class="btn-group">
