--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 		<script type="text/javascript" src="application/controllers/loginController.js"></script>
 		<script type="text/javascript" src="application/controllers/defaultController.js"></script>
 		<script type="text/javascript" src="application/controllers/opretButikController.js"></script>
+		<script type="text/javascript" src="application/controllers/butikOversigtController.js"></script>
 		<script type="text/javascript" src="application/controllers/minButikController.js"></script>
 		<script type="text/javascript" src="application/controllers/opretTagController.js"></script>
 		<script type="text/javascript" src="application/controllers/tagOversigtController.js"></script>
