--- a/pages/butikoversigt.html
+++ b/pages/butikoversigt.html
@@ -18,15 +18,15 @@
 				<table class="table table-striped table-hover">
 					<thead>
 						<tr>
-							<th>Navn</th>
+							<th>Butik</th>
 							<th>Tilknyttet bruger</th>
 							<th></th>
 						</tr>
 					</thead>
 					<tbody>
-						<tr>
-							<td>Netto</td>
-							<td>DinMor</td>
+						<tr ng-repeat="store in stores | filter:searchText">
+							<td>{{store.name}}</td>
+							<td>{{store.user.name}}</td>
 							<td align="right">
 								<a href class="btn btn-info btn-xs">Detaljer</a>
 								<div class="btn-group">
