--- a/pages/tagoversigt.html
+++ b/pages/tagoversigt.html
@@ -26,7 +26,7 @@
 					<tbody>
 						<tr ng-repeat="tag in tags | filter:searchText">
 							<td>{{tag.name}}</td>
-							<td><a href class="btn btn-info btn-xs">Vis</a></td>
+							<td><a href class="btn btn-info btn-xs" data-toggle="popover" data-content="Hai" title="Vis" id="showDesc" role="button" data-trigger="focus" tabindex="0">Vis</a></td>
 							<td align="right">
 								<div class="btn-group">
 		  							<a href class="btn btn-info btn-xs dropdown-toggle" data-toggle="dropdown">Mere <span class="caret"></span></a>
