--- a/pages/tagoversigt.html
+++ b/pages/tagoversigt.html
@@ -31,7 +31,7 @@
 								<div class="btn-group">
 		  							<a href class="btn btn-info btn-xs dropdown-toggle" data-toggle="dropdown">Mere <span class="caret"></span></a>
 									<ul class="dropdown-menu">
-									    <li><a href>Rediger</a></li>
+									    <li><a ng-click="gotoEditTag(tag)" ui-sref="tags_rediger" href>Rediger</a></li>
 									    <li><a href>Slet</a></li>
 								  	</ul>
 								</div>
