--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 		<script type="text/javascript" src="application/controllers/tilbudOversigtController.js"></script>
 		<script type="text/javascript" src="application/controllers/minProfilController.js"></script>
 		<script type="text/javascript" src="application/controllers/redigerTilbudController.js"></script>
+		<script type="text/javascript" src="application/controllers/redigerTagController.js"></script>
 		<script type="text/javascript" src="application/runs/loadIdService.js"></script>
 		
 		<!-- Custom styles -->
