--- a/pages/tagoversigt.html
+++ b/pages/tagoversigt.html
@@ -32,7 +32,7 @@
 		  							<a href class="btn btn-info btn-xs dropdown-toggle" data-toggle="dropdown">Mere <span class="caret"></span></a>
 									<ul class="dropdown-menu">
 									    <li><a ng-click="gotoEditTag(tag)" ui-sref="tags_rediger" href>Rediger</a></li>
-									    <li><a href>Slet</a></li>
+									    <li><a ng-click="setTagToDelete(tag)" data-toggle="modal" data-target="#deleteModal" href>Slet</a></li>
 								  	</ul>
 								</div>
 							</td>
@@ -42,4 +42,22 @@
 			</div>
 		</center>
 	</div>
+</div>
+
+<!-- Delete modal -->
+<div class="modal fade" id="deleteModal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Er du sikker?</h4>
+      </div>
+      <div class="modal-body">
+       	<p>Er du sikker på du vil slette det valgte tag?</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" ng-disabled="deleting" class="btn btn-default" data-dismiss="modal">Annuller</button>
+        <button id="buttonDelete" type="button" ng-click="delete()" data-spinner-size="32" data-style="zoom-out" class="btn btn-danger ladda-button"><span class="ladda-label">Slet</span></button>
+      </div>
+    </div>
+  </div>
 </div>
