--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
 		<script type="text/javascript" src="application/controllers/minProfilController.js"></script>
 		<script type="text/javascript" src="application/controllers/redigerTilbudController.js"></script>
 		<script type="text/javascript" src="application/controllers/redigerTagController.js"></script>
+		<script type="text/javascript" src="application/controllers/testController.js"></script>
 		<script type="text/javascript" src="application/runs/loadIdService.js"></script>
+		<script type="text/javascript" src="application/directives/bsPopover.js"></script>
 		
 		<!-- Custom styles -->
 		<link href="css/custom/styles.css" rel="stylesheet">
