--- a/pages/tagoversigt.html
+++ b/pages/tagoversigt.html
@@ -24,9 +24,9 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr ng-repeat="tag in tags | filter:searchText">
+						<tr ng-repeat="tag in tags | filter:searchText" bs-popover>
 							<td>{{tag.name}}</td>
-							<td><a href class="btn btn-info btn-xs" data-toggle="popover" data-content="Hai" title="Vis" id="showDesc" role="button" data-trigger="focus" tabindex="0">Vis</a></td>
+							<td><a class="btn btn-info btn-xs" data-toggle="popover" data-content="{{tag.description}}" data-placement="bottom">Vis</a></td>
 							<td align="right">
 								<div class="btn-group">
 		  							<a href class="btn btn-info btn-xs dropdown-toggle" data-toggle="dropdown">Mere <span class="caret"></span></a>
