--- a/pages/oprettag.html
+++ b/pages/oprettag.html
@@ -18,6 +18,7 @@
 			</div>			
 			<br/>
 			<button class="btn btn-success" type="submit">Opret tag</button>
+			<button class="btn btn-default" ui-sref="tags_oversigt" type="button">Tilbage</button>
 		  </fieldset>
 		</form>		
 	</div>
