BIlled placeholder skiftet

--- a/pages/oprettilbud.html
+++ b/pages/oprettilbud.html
@@ -34,7 +34,7 @@
 							<button class="btn btn-primary btn-sm" id="inputUploadBillede" type="button">Upload</button>
 						</div>
 						<div class="col-md-3">
-							<img src="http://img1.wikia.nocookie.net/__cb20140811144852/austinally/images/a/ab/Smiling-llama-header.jpg" alt="Llama" style="width:304px;height:228px" class="img-thumbnail">
+							<img src="res/picplaceholder.png" alt="Llama" style="width:304px;height:228px" class="img-thumbnail">
 						</div>
 					</div>
 				</div>
