--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 		<script type="text/javascript" src="application/controllers/defaultController.js"></script>
 		<script type="text/javascript" src="application/controllers/opretButikController.js"></script>
 		<script type="text/javascript" src="application/controllers/butikOversigtController.js"></script>
+		<script type="text/javascript" src="application/controllers/redigerButikController.js"></script>
 		<script type="text/javascript" src="application/controllers/minButikController.js"></script>
 		<script type="text/javascript" src="application/controllers/opretTagController.js"></script>
 		<script type="text/javascript" src="application/controllers/tagOversigtController.js"></script>
