--- a/pages/butikoversigt.html
+++ b/pages/butikoversigt.html
@@ -33,7 +33,7 @@
 		  							<a href class="btn btn-info btn-xs dropdown-toggle" data-toggle="dropdown">Mere <span class="caret"></span></a>
 									<ul class="dropdown-menu">
 										<li><a href >Nulstil adgangskode</a></li>
-									    <li><a href>Rediger</a></li>
+									    <li><a ng-click="setStoreToEdit(store)" ui-sref="butikker_rediger" href>Rediger</a></li>
 									    <li><a ng-click="setStoreToDelete(store)" data-toggle="modal" data-target="#deleteModal" href>Slet</a></li>
 								  	</ul>
 								</div>
