--- a/pages/redigerbutik.html
+++ b/pages/redigerbutik.html
@@ -40,7 +40,7 @@
 							<button class="btn btn-primary btn-sm" id="inputUploadBillede" type="button">Upload</button>
 						</div>
 						<div class="col-md-3">
-							<img src="http://i.imgur.com/ICNFlVA.png" alt="Silly Peasants" style="width:304px;height:228px" class="img-thumbnail">
+							<img src="res/picplaceholder.png" alt="Silly Peasants" style="width:304px;height:228px" class="img-thumbnail">
 						</div>
 					</div>
 				</div>
