--- a/pages/minbutik.html
+++ b/pages/minbutik.html
@@ -29,7 +29,7 @@
 			  </div>
 			</div>
 			<br/>
-			<button class="btn btn-success" id="inputUploadBillede" type="submit" ng-disabled="!isChanged()">Gem</button>
+			<button class="btn btn-success ladda-button" id="saveButton" data-style="expand-right" type="submit" ng-disabled="!isChanged()"><span class="ladda-label">Gem</span></button>
 			<br/>
 			<br/>
 		  </fieldset>
