--- a/pages/minprofil.html
+++ b/pages/minprofil.html
@@ -35,7 +35,7 @@
 			  </div>
 			</div>
 			<br/>
-			<button class="btn btn-success" id="inputGem" ng-disabled="!isChanged()" type="submit">Gem</button>
+			<button class="btn btn-success ladda-button" data-style="expand-right" id="saveButton" ng-disabled="!isChanged()" type="submit"><span class="ladda-label">Gem</span></button>
 			<br/>
 			<br/>
 		  </fieldset>
