--- a/pages/redigertag.html
+++ b/pages/redigertag.html
@@ -17,7 +17,7 @@
 			  </div>
 			</div>			
 			<br/>
-			<button class="btn btn-success" type="button" ng-click="save()">Gem</button>
+			<button class="btn btn-success ladda-button" id="saveButton" data-style="expand-right" type="button" ng-click="save()"><span class="ladda-label">Gem</span></button>
 		  </fieldset>
 		</form>		
 	</div>
