--- a/pages/redigertilbud.html
+++ b/pages/redigertilbud.html
@@ -77,7 +77,7 @@
 					</div>
 				</div>
 				<br/>
-				<button class="btn btn-success" id="inputUploadBillede" type="button" ng-click="save()">Gem</button>
+				<button class="btn btn-success ladda-button" data-style="expand-right" id="saveButton" type="button" ng-click="save()"><span class="ladda-label">Gem</span></button>
 			</fieldset>
 		</form>		
 	</div>
