--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 		
 		<!-- Custom styles -->
 		<link href="css/custom/styles.css" rel="stylesheet">
+		<link href="css/custom/hjelp.css" rel="stylesheet">
 
 	</head>
 	<body>
