--- a/pages/butikoversigt.html
+++ b/pages/butikoversigt.html
@@ -28,7 +28,7 @@
 							<td>{{store.name}}</td>
 							<td>{{store.user.name}}</td>
 							<td align="right">
-								<a href class="btn btn-info btn-xs">Detaljer</a>
+								<a href ng-click="setStoreToEdit(store)" ui-sref="butikker_rediger" class="btn btn-info btn-xs">Detaljer</a>
 								<div class="btn-group">
 		  							<a href class="btn btn-info btn-xs dropdown-toggle" data-toggle="dropdown">Mere <span class="caret"></span></a>
 									<ul class="dropdown-menu">
