--- a/pages/butikoversigt.html
+++ b/pages/butikoversigt.html
@@ -6,7 +6,7 @@
 					<td class="bar-cell"><a href ui-sref="butikker_opret" class="btn btn-default btn-sm">Opret butik</a></td>
 					<td>
 						<div class="input-group">
-							<input class="form-control input-sm" type="text" id="searchInput" placeholder="Søg butik...">
+							<input class="form-control input-sm" ng-model="searchText" type="text" id="searchInput" placeholder="Søg butik...">
 						</div>
 					</td>
 				</tr>
