--- a/pages/opretbutik.html
+++ b/pages/opretbutik.html
@@ -22,7 +22,7 @@
 						<input class="form-control" id="inputAddress" name="storeAddress" ng-model="store.address" placeholder="Nallergade 16 7590 Lorteland" type="text" required>
 					</div>
 				</div>
-				<div class="form-group" ng-class="{'has-error' : createForm.storePhone.$invalid && createForm.storePhone.$dirty}">
+				<div class="form-group" ng-class="{'has-error' : createForm.storePhone.$invalid && createForm.storePhone.$dirty || !isPhoneValid('store') && submitted}">
 					<label for="inputPhone" class="col-lg-2  col-lg-offset-1 control-label">Telefon *</label>
 					<div class="col-lg-6">
 						<input class="form-control" id="inputPhone" name="storePhone" ng-model="store.phone" placeholder="+4547594758" type="text" required>
@@ -54,7 +54,7 @@
 						<input class="form-control" id="inputAdgangskodeIgen" name="userPasswordAgain" ng-model="user.passwordAgain" placeholder="Igen" type="text" required>
 					</div>
 				</div>
-				<div class="form-group" ng-class="{'has-error' : createForm.userPhone.$invalid && createForm.userPhone.$dirty}">
+				<div class="form-group" ng-class="{'has-error' : createForm.userPhone.$invalid && createForm.userPhone.$dirty || !isPhoneValid('user') && submitted}">
 					<label for="inputTelefon" class="col-lg-2  col-lg-offset-1 control-label">Telefon *</label>
 					<div class="col-lg-6">
 						<input class="form-control" id="inputTelefon" name="userPhone" ng-model="user.phone" placeholder="47594758" type="text" required>
